--- a/VCU Super Car/.settings/org.eclipse.core.resources.prefs
+++ b/VCU Super Car/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//Debug/include/User/subdir_rules.mk=UTF-8
+encoding//Debug/include/User/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
 encoding//Debug/objects.mk=UTF-8
 encoding//Debug/source/User/subdir_rules.mk=UTF-8
